--- a/index.html
+++ b/index.html
@@ -5,12 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>My Project</title>
+    <title>Event Key Codes</title>
 </head>
 <body>
-    <h1>Project Starter</h1>
-    <h2>Hello</h2>
-    <h2>Hello</h2>
+    <div id="insert">
+        <div class="key">
+            a
+            <small>event.key</small>
+        </div>
+        <div class="key">
+            65
+            <small>event.keycode</small>
+        </div>
+        <div class="key">
+            KeyA
+            <small>event.key</small>
+        </div>
+        <div class="key">
+            Press any key to get the keycode and code.
+        </div>
+    </div>
+   
 
 
 
